--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "envs": "*",
+    "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "schemas": "*",
-    "envs": "*"
+    "schemas": "*"
   },
   "devDependencies": {
     "typescript": "^5",
