--- a/.github/workflows/ci_websocket.yml
+++ b/.github/workflows/ci_websocket.yml
@@ -39,4 +39,4 @@ jobs:
             docker stop excalibur_ws
             docker rm excalibur_ws
             docker pull souravbhowal/excalibur_ws:${{ github.sha }}
-            docker run --name excalibur_ws -d -p 3003:3003 souravbhowal/excalibur_ws:${{ github.sha }}
+            docker run --name excalibur_ws -d -e DATABASE_URL=${{ secrets.DATABASE_URL }} -e RABBITMQ_URL=${{ secrets.RABBITMQ_URL }} -p 3003:3003 souravbhowal/excalibur_ws:${{ github.sha }}
