--- a/apps/websocket/package.json
+++ b/apps/websocket/package.json
@@ -16,6 +16,7 @@
     "@types/amqplib": "^0.10.6",
     "@types/jsonwebtoken": "^9.0.9",
     "amqplib": "^0.10.5",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2"
   }
 }
